content/vault/v1.8.x/content/docs/plugin-portal.mdx
---
layout: docs
page_title: Plugin Portal
description: A curated collection of official, partner, and community Vault plugins.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:54:12-05:00
last_modified: 2025-07-25T13:26:43-07:00
# END AUTO GENERATED METADATA
---

# Plugin Portal

This page contains a curated collection of official, partner, and community
[Vault plugins](/vault/docs/internals/plugins).

For more information about plugin development, refer to this [documentation
section](/vault/docs/internals/plugins#plugin-development) and this [Learn
Guide](https://learn.hashicorp.com/vault/developer/plugin-backends).

## Official

Official plugins are supported and maintained by HashiCorp.
Unless indicated otherwise, these plugins are available directly in the Vault
binary, but they can also be built and registered to Vault as external plugins
if necessary.

If a plugin exists separately under its own repository, follow the instructions
within that repository to develop, test, and build the plugin. If a repository
exists within the Vault repository, the plugin can be built as instructed in
[here](/vault/docs/internals/plugins#built-in-plugins).

### Auth

<Columns count={2}>

- [AliCloud](https://github.com/hashicorp/vault-plugin-auth-alicloud)
- [AppRole](/vault/api-docs/auth/approle)
- [Amazon Web Services (AWS)](/vault/api-docs/auth/aws)
- [Azure](https://github.com/hashicorp/vault-plugin-auth-azure)
- [Centrify](https://github.com/hashicorp/vault-plugin-auth-centrify)
- [Cloud Foundry](https://github.com/hashicorp/vault-plugin-auth-cf)
- [GitHub](/vault/api-docs/auth/github)
- [Google Cloud Platform (GCP)](https://github.com/hashicorp/vault-plugin-auth-gcp)
- [JWT/OIDC](https://github.com/hashicorp/vault-plugin-auth-jwt)
- [Kerberos](https://github.com/hashicorp/vault-plugin-auth-kerberos)
- [Kubernetes](https://github.com/hashicorp/vault-plugin-auth-kubernetes)
- [Okta](/vault/api-docs/auth/okta)
- [Oracle Cloud Infrastructure (OCI)](https://github.com/hashicorp/vault-plugin-auth-oci)
- [RADIUS](/vault/api-docs/auth/radius)
- [TLS Certificates](/vault/api-docs/auth/cert)
- [Username/Password](/vault/api-docs/auth/userpass)

</Columns>

### Database

<Columns count={2}>

- [Cassandra](/vault/api-docs/secret/databases/cassandra)
- [Couchbase](https://github.com/hashicorp/vault-plugin-database-couchbase)
- [Elasticsearch](https://github.com/hashicorp/vault-plugin-database-elasticsearch)
- [InfluxDB](/vault/api-docs/secret/databases/influxdb)
- [HanaDB](/vault/api-docs/secret/databases/hanadb)
- [MongoDB](/vault/api-docs/secret/databases/mongodb)
- [MongoDB Atlas](https://github.com/hashicorp/vault-plugin-database-mongodbatlas)
- [MSSQL](/vault/api-docs/secret/databases/mssql)
- [MySQL/MariaDB](/vault/api-docs/secret/databases/mysql-maria)
- [Oracle Database](https://github.com/hashicorp/vault-plugin-database-oracle) <Tag title='external' color='yellow' />
- [PostgreSQL](/vault/api-docs/secret/databases/postgresql)
- [Redshift](/vault/api-docs/secret/databases/redshift)

</Columns>

### Secrets

<Columns count={2}>

- [Active Directory](https://github.com/hashicorp/vault-plugin-secrets-ad)
- [AliCloud](https://github.com/hashicorp/vault-plugin-secrets-alicloud)
- [Amazon Web Services AWS](/vault/api-docs/secret/aws)
- [Azure](https://github.com/hashicorp/vault-plugin-secrets-azure)
- [Consul](/vault/api-docs/secret/consul)
- [Google Cloud Platform (GCP)](https://github.com/hashicorp/vault-plugin-secrets-gcp)
- [GCP KMS](https://github.com/hashicorp/vault-plugin-secrets-gcpkms)
- [KMIP](/vault/api-docs/secret/kmip) <sup>ENTERPRISE</sup>
- [Key/Value (KV)](https://github.com/hashicorp/vault-plugin-secrets-kv)
- [MongoDB Atlas](https://github.com/hashicorp/vault-plugin-secrets-mongodbatlas)
- [Nomad](/vault/api-docs/secret/nomad)
- [OpenLDAP](https://github.com/hashicorp/vault-plugin-secrets-openldap)
- [PKI](/vault/api-docs/secret/pki)
- [RabbitMQ](/vault/api-docs/secret/rabbitmq)
- [SSH](/vault/api-docs/secret/ssh)
- [TOTP](/vault/api-docs/secret/totp)
- [Transform](/vault/api-docs/secret/transform) <sup>ENTERPRISE</sup>
- [Transit](/vault/api-docs/secret/transit)

</Columns>

## Partner

Partner plugins are developed by HashiCorp partners and are owned and maintained by the technology partner. HashiCorp has verified the authenticity of the partner’s plugin, and that the partner is a member of the [HashiCorp Technology Partner Program](https://www.hashicorp.com/partners/become-a-partner#technology). Compatibility and stability guarantees on these plugins are established by their authors.

### Auth

- [Exoscale](https://github.com/exoscale/vault-plugin-auth-exoscale)

### Database

- [Aerospike](https://github.com/aerospike-community/vault-plugin-database-aerospike)
- [Redis Enterprise](https://github.com/RedisLabs/vault-plugin-database-redis-enterprise)

### Secrets

- [Exoscale](https://github.com/exoscale/vault-plugin-secrets-exoscale)
- [PrimeKey EJBCA](https://github.com/primekeydevs/ejbca-vault-plugin)
- [Venafi](https://github.com/Venafi/vault-pki-backend-venafi)

## Community

Community plugins are developed by community members. Compatibility and
stability guarantees on these plugins are established by their authors.

Plugin authors who wish to have their plugins listed may file a submission via a
[GitHub issue][github-issue] or directly open a pull request with changes to
[this page][plugin-portal-mdx].

### Auth

- [Jenkins](https://plugins.jenkins.io/hashicorp-vault-plugin)
- [Terraform Enterprise/Terraform Cloud](https://github.com/gitrgoliveira/vault-plugin-auth-tfe)

### Secrets

- [Ethereum](https://github.com/immutability-io/vault-ethereum)
- [GitHub](https://github.com/martinbaillie/vault-plugin-secrets-github)
- [HSM PKI Plugin](https://github.com/mode51software/vaultplugin-hsmpki)
- [OAuth 2.0/OIDC](https://github.com/puppetlabs/vault-plugin-secrets-oauthapp)

[github-issue]: https://github.com/hashicorp/vault/issues/new?assignees=&labels=ecosystem%2Fplugin&template=plugin-submission.md&title=%5BPlugin+Portal%5D+Plugin+Submission+-+%3CPLUGIN+NAME%3E
[plugin-portal-mdx]: https://github.com/hashicorp/vault/blob/main/website/content/docs/plugin-portal.mdx
